# physics_simulation

./: README.md  pyproject.toml
scripts/: generate_calibration_demo.py  generate_dashboard_gallery.py  generate_gallery.py
src/quantum_optical_bus/: __init__.py  app.py  application.py  calibration_app.py  compat.py  hardware.py  interface.py  legacy_simulation.py  quantum.py  visualization.py
tests/: test_core.py
