[project]
name = "quantum-optical-bus-simulation"
version = "0.1.0"
description = "A modern physics simulation using marimo and uv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "marimo",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "strawberryfields",
    "meep",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
